# weekend_training_DRF

./: .gitignore  Makefile  docker-compose.yaml  docker-compose.yml  requirements.txt
api/: models.py  urls.py
api/migrations/: 0001_initial.py
api/serializers/: authors.py  books.py
api/viewsets/: authors.py  books.py
app/: Dockerfile  pyproject.toml
app/hello_celery/: admin.py  apps.py  models.py  views.py
app/hello_celery/migrations/: 0001_initial.py
app/hello_celery/tasks/: __init__.py  class_based_tasks.py  ping.py
app/market/: celery.py  settings.py  urls.py
dockerfiles/: Dockerfile  DockerfileDB
learning/gitea_drone_cicd/: 00.index.md  01.gitea.md  02.drone.md  03.runner.md  04.docker-runner.md
learning/hello_celery/: 001. Celery.md  002. celery tasks.md
market/: settings.py  urls.py  utils.py
