[tool.poetry]
name = "training-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "training_app"}]

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
celery = "^5.3.6"
dj-database-url = "^2.1.0"
drf-yasg = "^1.21.7"
psycopg2-binary = "^2.9.9"
django-extensions = "^3.2.3"
ipython = "^8.18.1"
redis = "^5.0.1"
django = "4.2"
django-celery-beat = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
